新增导航栏————响应式设计(2)

--- a/style-c.css
+++ b/style-c.css
@@ -111,9 +111,9 @@
               display: none;  
          }
          } */
-         .container-collapse-nav-search{
-            /* padding-left: 15px; */
-         }
+         /* .container-collapse-nav-search{
+            padding-left: 15px;
+         } */
          .container-collapse-nav-search-limit{
             position: relative;
             top: 9px;
