--- a/style-d.css
+++ b/style-d.css
@@ -34,6 +34,7 @@
              margin-bottom: 20px;
              font-family: Microsoft YaHei;
          }
+         
          .width-limit{
              max-width: 1440px;
              min-width: 768px;
@@ -59,6 +60,13 @@
             margin-left: 0;
             float: left;
          }
+         /* .container>.navbar-header:after {
+            clear: both;
+        }
+         .navbar-header:after, .navbar-header:before {
+            content: " ";
+            display: table;
+        } */
          .container>.navbar-header button{
             cursor: pointer;
             outline: none;
@@ -73,7 +81,9 @@
             border-radius: 4px;
             position: relative;
          }
-         
+         .container>.navbar-header button:hover{
+             background-color: rgba(221, 221, 221, 0.007);
+         }
          .container>.navbar-header button .icon-bar{
             background-color: #888;
             display: block;
@@ -85,6 +95,7 @@
             margin-top: 4px;
          }
          .container-collapse{
+            
             border-color: #e7e7e7;
             margin-right: -15px;
             max-height: 340px;
@@ -98,77 +109,62 @@
             padding-left: 15px;
             box-shadow: inset 0 1px 0 hsla(0,0%,100%,.1);
 }
-         }
+         
          .container-collapse-nav{
+             display: none;
             background: #fff;
             margin: 0 -15px;
              
          }
          .container-collapse-nav div{
-            border-bottom: 1px solid #f0f0f0;
-            margin-right: 10px;
+            border-bottom: 1px solid #f0f0f0;            
+            margin-right: 15px;
             position: relative;
             display: block;
             line-height: 20px;
+            height: 56px;           
         }
-         }
+        .container-collapse-nav div.tab{
+            border-top: 1px solid #f0f0f0;
+        }
     
          .container-collapse-nav-tab a{
             position: relative;
             display: block;
             color: #ea6f5a;
             background: none;
-            height: 56px;
+            /* height: 56px; */
             line-height: 26px;
             padding: 15px;
             text-align: center;
+            text-decoration:none; 
          }
          .container-collapse-nav-tab a img{
             display: none;
          }
-         .container-collapse-nav-tab a span{
-             
-         }
-         /* @media (max-width: 1200px) and (min-width: 992px){
-             body{
-                 background: coral;
-             }
-    
-             .container-collapse-nav-tab a img{
-              display: none;  
-         } */
-         /* @media screen and (max-width: 992px) and (min-width: 756px){
-             body{
-                 background: yellowgreen;
-             }
-    
-             .container-collapse-nav-tab a span{
-              display: none;  
-         }
-         } */
+         
          .container-collapse-nav-search{
-            /* padding-left: 15px; */
+            padding-left: 15px;
+            margin-right: 10px;
          }
          .container-collapse-nav-search-limit{
             position: relative;
             top: 9px;
+            margin: 0 0 20px;
          }
          .container-collapse-nav-search-limit input{
-            width: 150px;
+            width: 100%;
             padding: 0 40px 0 20px;
             height: 38px;
             font-size: 14px;
             border: 1px solid #eee;
             border-radius: 40px;
             background: #eee;
-            transition: width .3s linear;
-            transition-delay: .1s;
+            /* transition: width .3s linear;
+            transition-delay: .1s; */
             outline: none;
          }
-         /* .container-collapse-nav-search-limit input:focus {
-            width: 300px;
-            
-         } */
+         
         
          .container-collapse-nav-search-limit a{
             position: absolute;
@@ -255,7 +251,7 @@
         .style-mode-btn{
             float: right;
             line-height: 20px;
-            padding: 17px 10px;
+            padding: 15px 10px;
             font-size: 24px;
             color: #969696;
         }
