--- a/style-d.css
+++ b/style-d.css
@@ -82,7 +82,7 @@
             position: relative;
          }
          .container>.navbar-header button:hover{
-             background-color: rgba(221, 221, 221, 0.007);
+             background-color: rgba(221, 221, 221, 0.6);
          }
          .container>.navbar-header button .icon-bar{
             background-color: #888;
@@ -94,8 +94,7 @@
          .container>.navbar-header button .icon-bar+.icon-bar{
             margin-top: 4px;
          }
-         .container-collapse{
-            
+         .container-collapse{           
             border-color: #e7e7e7;
             margin-right: -15px;
             max-height: 340px;
@@ -108,12 +107,15 @@
             padding-right: 15px;
             padding-left: 15px;
             box-shadow: inset 0 1px 0 hsla(0,0%,100%,.1);
+            
 }
          
          .container-collapse-nav{
              display: none;
             background: #fff;
             margin: 0 -15px;
+            height: 0;
+            
              
          }
          .container-collapse-nav div{
@@ -178,7 +180,7 @@
             text-align: center;
          }
          .container-collapse-nav-search-limit a img{
-            margin: 4px -2px 4px 2px;
+            margin: 4px -2px 4px 0px;
             /* display: block; */
             height: 21px;           
          }
