新增导航栏————响应式设计(4)/完成

--- a/style-d.css
+++ b/style-d.css
@@ -111,7 +111,8 @@
 }
          
          .container-collapse-nav{
-             display: none;
+             /* display: none; */
+             visibility: hidden;
             background: #fff;
             margin: 0 -15px;
             height: 0;
