--- a/css/style-d.css
+++ b/css/style-d.css
@@ -1,118 +1,153 @@
-  
-     *{
-    margin:0;
-    padding:0；
-    
-     }
-     @font-face {
-    font-family: 'iconfont';  /* project id 1512202 */
-    src: url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.eot');
-    src: url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.eot?#iefix') format('embedded-opentype'),
-    url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.woff2') format('woff2'),
-    url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.woff') format('woff'),
-    url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.ttf') format('truetype'),
-    url('http://at.alicdn.com/t/font_1512202_8w0hz7jz9t8.svg#iconfont') format('svg');
-    }    
-    .iconfont {
-    font-family: iconfont!important;
-    font-size: inherit;
-    font-style: normal;
-    font-weight: 400!important;
-    -webkit-font-smoothing: antialiased;
+
+    *{
+        margin:0;
+        padding:0；   
     }
-     .navbar{
-         width: 100%;
-         height: 55px;
-         top: 0;
-         position:fixed;
-         background-color: #fff;
-         border-bottom: 1px solid #f0f0f0;
-         margin-bottom: 20px;
-         font-family: Microsoft YaHei;
-     }
-     .width-limit{
-         max-width: 1440px;
-         min-width: 768px;
-         height: 100%;
-         margin: 0 auto;
-         display: block;
-     }
-     
-     .logo img{
-         float: left;
-         height: 100%;
-     }
-     .container{
-         margin-left: auto;
-         margin-right: auto;
-         padding-left: 15px;
-         padding-right: 15px;
-         width: 930px;
-         height: 100%;
-     }
-     .container>.navbar-header{
+    
+    body{
+        background: yellow;
+    }
+    .navbar{
+        width: 100%;
+        height: 55px;
+        top: 0;
+        position:fixed;
+        background-color: #fff;
+        border-bottom: 1px solid #f0f0f0;
+        margin-bottom: 20px;
+        font-family: Microsoft YaHei;
+    }
+    
+    .width-limit{
+        max-width: 1440px;
+        min-width: 768px;
+        height: 100%;
+        margin: 0 auto;
+        display: block;
+    }
+    
+    .logo img{
+        float: left;
+        height: 100%;
+    }
+    .container{
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 930px;
+        height: 100%;
+    }
+    .container>.navbar-header{
+        margin-right: 0;
+        margin-left: 0;
+        float: left;
+    }
+    
+    .container>.navbar-header button{
+        cursor: pointer;
+        outline: none;
+        float: left;
+        padding: 11px 10px;
+        margin-top: 9px;
+        margin-bottom: 8px;
+        margin-right: 15px;
+        background-color: transparent;
+        background-image: none;
+        border: 1px solid #e7e7e7;           
+        border-radius: 4px;
+        position: relative;
+    }
+    .container>.navbar-header button:hover{
+        background-color: rgba(221, 221, 221, 0.6);
+    }
+    .container>.navbar-header button .icon-bar{
+        background-color: #888;
+        display: block;
+        width: 22px;
+        height: 2px;
+        border-radius: 1px;
+    }
+    .container>.navbar-header button .icon-bar+.icon-bar{
+        margin-top: 4px;
+    }
+    .container-collapse{           
+        border-color: #e7e7e7;
+        margin-right: -15px;
+        max-height: 340px;
+        overflow-y: auto;
+        display: block;
+        width: 100vw;
+        border: none;
+        margin-left: -15px!important;
+        overflow-x: visible;
+        padding-right: 15px;
+        padding-left: 15px;
+        box-shadow: inset 0 1px 0 hsla(0,0%,100%,.1);
+    
+}
+    
+    .container-collapse-nav{
+        /* display: none; */
+        visibility: hidden;
+        background: #fff;
+        margin: 0 -15px;
+        height: 0;       
+    }
+    .container-collapse-nav-tab{
+        border-bottom: 1px solid #f0f0f0;            
+        margin-right: 15px;
+        /* position: relative; */
+        display: block;
+        line-height: 20px;
+        height: 56px;           
+    }
+    .container-collapse-nav div.tab{
+        border-top: 1px solid #f0f0f0;
+    }
+
+    .container-collapse-nav-tab a{
+        position: relative;
+        display: block;
+        color: #ea6f5a;
+        background: none;
+        /* height: 56px; */
+        line-height: 26px;
+        padding: 15px;
+        text-align: center;
+        text-decoration:none; 
+    }
+    .container-collapse-nav-tab a img{
         display: none;
     }
-     .container-collapse{
-        height: 100%;
-        width: 945px;
-        margin-left: -15px;
-     }
-     .container-collapse-nav{
-         float: left;
-         margin: 0;
-         height: 100%;
-     }
-     .container-collapse-nav div{
-         margin-right: 10px;
-         float: left;
-         /* position: relative; */
-         display: block;
-         line-height: 20px;
-         /* height: 100%; */
-     }
-
-     .container-collapse-nav-tab a{
-         color: #ea6f5a;
-         height: 25px;
-         line-height: 20px;
-         padding: 15px;
-         position: relative;
-         display: block;
-         text-decoration:none; 
-     }
-     .container-collapse-nav-tab a img{
-        margin-right: 5px;
-        display: inherit;
-        float: left;
-        height: 21px;
-     }
-     
-     .container-collapse-nav-search{
+        
+    .container-collapse-nav-search{
         padding-left: 15px;
+        margin-right: 10px;
         height: 100%;
-     }
-     .container-collapse-nav-search-limit{
+        float: left;
+        display: block;
+        line-height: 20px;
+    }
+    .container-collapse-nav-search-limit{
         position: relative;
         top: 9px;
+        margin: 0 0 20px;
         height: 35px;
-     }
-     .container-collapse-nav-search-limit input{
-        width: 240px;
+    }
+    .container-collapse-nav-search-limit input{
+        width: 100%;
         padding: 0 40px 0 20px;
         height: 38px;
         font-size: 14px;
         border: 1px solid #eee;
         border-radius: 40px;
         background: #eee;
-        transition: width .3s linear;
-        transition-delay: .1s;
+        /* transition: width .3s linear;
+        transition-delay: .1s; */
         outline: none;
-     }
-     .container-collapse-nav-search-limit input:focus {
-        width: 300px;   
-     }
-     .container-collapse-nav-search-limit-img{
+    }
+    .container-collapse-nav-search-limit-img{
         position: absolute;
         top: 4px;
         right: 5px;
@@ -124,17 +159,15 @@
         text-align: center;
         margin-right: 0 !important;
         border-radius: 50%;
-        background-color:transparent;
-        /* float: right; */
-     }
-     
-     .container-collapse-nav-search-limit a img{
+        background-color:transparent;        
+    }
+    
+    .container-collapse-nav-search-limit .search-img{
         margin: 4px 0px 4px 0px;
         /* display: block; */
-        height: 21px;  
-               
-     }
-     #navbar-search-tips{
+        height: 21px;           
+    }
+    #navbar-search-tips{
         position: absolute;
         background-color: #fff;
         box-shadow: 0 0 8px rgba(0,0,0,.2);
@@ -147,7 +180,7 @@
         /* opacity: 0; */
         border-radius: 4px;
         border:1px solid white;
-     }
+    }
     
     .trangle{
         position:absolute;
@@ -158,8 +191,8 @@
         top:-24px;
         left:8%;
     }
-     
-     #navbar-search-tips .search-recent {
+        
+    #navbar-search-tips .search-recent {
         padding: 5px;
         width: 240px;
         /* visibility: hidden; */
@@ -196,7 +229,7 @@
         color: #787878;
     }
     .search-recent .search-recent-item-wrap li a span {
-       
+        
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
@@ -208,9 +241,9 @@
         right: 15px;
         top: 10px;
         color: #a0a0a0;
-       
+        
     } */
-     .menu-text-download{
+    .menu-text-download{
         color: #333333;
     }
     .download a:hover{
@@ -278,7 +311,7 @@
     .style-mode-btn{
         float: right;
         line-height: 20px;
-        padding: 17px 10px;
+        padding: 15px 10px;
         font-size: 24px;
         color: #969696;
     }
@@ -292,7 +325,7 @@
         vertical-align: middle;
     }
     .body{
-       height: 900px;
-       background-color: bisque;
-       font-family: Microsoft YaHei;
+        height: 900px;
+        background-color: bisque;
+        font-family: Microsoft YaHei;
     }
