--- a/css/style-a.css
+++ b/css/style-a.css
@@ -159,6 +159,7 @@
     .search-recent-item-wrap div{
         margin-right: 0;
     }
+    
     .search_history_list_item {
         margin-right: 0;
         border-radius: 4px;
@@ -174,10 +175,7 @@
     .search_history_list_item:hover {
         background-color: #eee;
     }
-    .search_history_list_item:hover .search_history_list_item-right{
-        visibility: visible;
-    }
-    
+
     .search_history_list_item-left {
         float: left;
         margin:0 10px 0 0;
@@ -197,10 +195,13 @@
         width:10px;
         position: absolute;
         right: 15px;
-        top: 15px;
+        top: 20px;
         color: #a0a0a0;
         visibility: hidden;
     }
+    .search-recent-item-wrap div:hover .search_history_list_item-right{
+        visibility: visible;
+    } 
     .menu-text-download{
         color: #333333;
     }
@@ -264,6 +265,7 @@
     }
     .nav-beta-limit-image{
         height: 25px;
+        cursor: pointer;
     }
     .style-mode-btn{
         float: right;
