--- a/css/style-c.css
+++ b/css/style-c.css
@@ -268,6 +268,7 @@
     }
     .nav-beta-limit-image{
         height: 25px;
+        cursor: pointer;
     }
     .style-mode-btn{
         float: right;
