--- a/css/style-d.css
+++ b/css/style-d.css
@@ -299,7 +299,7 @@
         float: right;
         height: 25px;
         padding: 15px 0px;
-        margin: 0 12px;
+        margin: 0 12px; 
     }
     .nav-beta-limit{
         width: 100%;
@@ -307,6 +307,7 @@
     }
     .nav-beta-limit-image{
         height: 25px;
+        cursor: pointer;
     }
     .style-mode-btn{
         float: right;
