新增导航栏————搜索框历史记录(4)+beta弹窗

--- a/css/beta.css
+++ b/css/beta.css
@@ -1,3 +1,17 @@
+.nav-beta{
+    float: right;
+    height: 25px;
+    padding: 15px 0px;
+    margin: 0 12px;
+}
+.nav-beta-limit{
+    width: 100%;
+    height: 100%;
+}
+.nav-beta-limit-image{
+    height: 25px;
+    cursor: pointer;
+}
 .nav-beta-click{
     display: none;
 }
