修改轮播图——实现点击连续翻页

--- a/css/body-right.css
+++ b/css/body-right.css
@@ -2,8 +2,10 @@
     padding: 30px 0 0;
     margin-left: 3.66666%;
     width: 29.16667%;
-    display: inline-block;
-    background-color: aqua;    
+    /* display: inline-block; */
+    float: left;
+    background-color: antiquewhite;    
     box-sizing: border-box;
     vertical-align: top;
+    height: 900px;
 }
