--- a/css/body-left-banner.css
+++ b/css/body-left-banner.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Semibold;
+    src: url(../font/杨任东竹石体-Semibold.ttf);
+}
+
 .body {
     margin-left: auto;
     margin-right: auto;
@@ -6,6 +11,8 @@
     width: 930px;
     position: relative;
     top: 56px;
+    font-family: Microsoft YaHei;
+    height: 900px;
 }
 .row {
     margin: 0px -15px;
@@ -13,51 +20,77 @@
 .row-left {
     padding: 30px 0 0 15px;
     width: 66.66667%;
-    display: inline-block;
+    /* display: inline-block; */
     box-sizing: border-box;
+    height: 900px;
+    float: left;
 }
 .row-left-banner {
     margin-bottom: 35px;
-    border-radius: 16px;
+    border-radius: 10px;
+}
+
+.banner-wrap{
     overflow: hidden;
+    position: relative;
     white-space: nowrap;
 }
-.row-left-banner-arrow-left {
+.banner-img-wrap{ 
+    z-index: 1;
     position: absolute;
-    left: 23px;
-    top: 150px;
-    width: 20px;
-    height: 20px;
-    background-color:black;
-    opacity: 0.5;
-    z-index: 100;
 }
-.row-left-banner-arrow-right {
-    position: absolute;
-    right: 330px;
-    top: 150px;
-    width: 20px;
-    height: 20px;
-    background-color:black;
-    opacity: 0.5;
-    z-index: 100;
-}
-.row-left-banner-swiper , 
-.row-left-banner-swiper-wrapper , 
-.swiper-slide {
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
-}
-.row-left-banner-swiper-wrapper {
-    position: relative;
-    top: 0;
-    left: 0;
-    transition: 1s;
-}
-.swiper-slide {
+
+.banner-image{
     display: inline-block;
 }
-.swiper-slide img {
-    height: 270px;
+
+.banner-btn{
+    z-index: 2;
+    width: 50px;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    align-items: center;
+}
+
+.banner-btn-east{
+    left: 0;
+}
+
+.banner-btn-east:hover{
+    cursor: pointer;
+    background: rgba(255, 255, 255, .08);
+}
+
+.banner-btn-east-icon{
+    width: 0; 
+    height: 0;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent #FFFFFF transparent transparent;
+}
+
+.banner-btn-west{
+    right: 0;
+}
+
+.banner-btn-west:hover{
+    cursor: pointer;
+    background: rgba(255, 255, 255, .08);
+}
+
+.banner-btn-west-icon{
+    width: 0; 
+    height: 0;
+    margin-left: 20px;
+    border-width: 15px;
+    border-style: solid;
+    transform: rotate(180deg);
+    border-color: transparent #FFFFFF transparent transparent;
+}
+
+.banner-img-wrap-animation{
+    z-index: 1;
+    position: absolute;
+    transition: left .5s;
 }
