--- a/css/body-right.css
+++ b/css/body-right.css
@@ -1,11 +1,187 @@
 .row-right{
     padding: 30px 0 0;
-    margin-left: 3.66666%;
+    margin-left: 4.16667%;
     width: 29.16667%;
-    /* display: inline-block; */
-    float: left;
-    background-color: antiquewhite;    
+    float: left; 
     box-sizing: border-box;
     vertical-align: top;
-    height: 900px;
+}
+.board {
+    margin-top: -4px;
+    padding-bottom: 4px;
+    min-height: 228px;
+    display: block;
+}
+.board img {
+    width: 100%;
+    min-height: 50px;
+    margin-bottom: 6px;
+    border-radius: 4px;
+    vertical-align: middle;
+}
+#index-aside-download {
+    margin-bottom: 30px;
+    padding: 10px 22px;
+    width: 100%;
+    border: 1px solid #f0f0f0;
+    border-radius: 6px;
+    background-color: #fff;
+    display: inline-block;
+    box-sizing: border-box;
+    position: relative;
+}
+.download-img {
+    width: 60px;
+    height: 60px;
+    opacity: .85;
+    vertical-align: middle;
+}
+.download-info {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 7px;
+}
+.download-title img {
+    vertical-align: middle;
+    height: 13px;
+    padding-right: 3px;  
+}
+.download-title {
+    font-size: 15px;
+    color: #333;
+}
+.download-description {
+    margin-top: 4px;
+    font-size: 13px;
+    color: #999;
+}
+.download-popover {
+    position: absolute;
+    bottom: 90px;
+    right: 45px;
+    width: 160px;
+    z-index: 1;
+    padding:10px;
+    background-color: #fff;
+    border: rgba(59, 57, 57, 0.692) solid 1px;
+    border-radius: 4px;
+    box-shadow: 0 2px 15px rgba(0,0,0,.2);
+    filter: drop-shadow(0 0 15px rgba(0,0,0,.2));
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s;
+}
+.download-popover img {
+    width:100%
+}
+.download-triangle {
+    width: 0;
+    height: 0;
+    border: none;
+    border: 10px solid transparent;
+    border-top-color: white;
+    position: absolute;
+    top: 184px;
+    left: 80px;
+}
+.recommended-authors {
+    margin-bottom: 20px;
+    padding-top: 0;
+    font-size: 13px;
+}
+.author-title {
+    text-align: left;
+}
+.author-title span {
+    font-size: 14px;
+    color: #969696;
+}
+.page-change {
+    float: right;
+    display: inline-block;
+    font-size: 14px;
+    color: #969696;
+}
+.page-change img {
+    vertical-align: middle;
+    height: 13px;
+    padding-right: 4px;  
+}
+.page-change:hover {
+    cursor: pointer;
+    color: black;
+    transition: ease-in .2s; 
+}
+
+
+.author-list {
+    margin: 0 0 20px;
+    text-align: left;
+    list-style: none;
+    padding-left: 0;
+}
+.author-list li {
+    margin-top: 15px;
+}
+.author-list-img {
+    float: left;
+    width: 48px;
+    height: 48px;
+    margin-right: 10px;
+    display: block;
+}
+.author-list-img img {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+.author-list-follow {
+    float: right;
+    margin-top: 5px;
+    padding: 0;
+    font-size: 13px;
+    color: #42c02e;
+}
+.author-list-follow img {
+    vertical-align: top;
+    height: 18px;
+}
+.author-list-name {
+    padding-top: 5px;
+    margin-right: 60px;
+    font-size: 14px;
+    display: block;
+    text-decoration: none;
+    color: black;
+}
+.author-list p {
+    margin: 3px 0 10px 0;
+    font-size: 12px;
+    color: #969696;
+    line-height: 20px;
+}
+.find-more {
+    box-sizing: border-box;
+    padding: 7px 7px 7px 12px;
+    width: 100%;
+    font-size: 13px;
+    color: #787878;
+    background-color: #f7f7f7;
+    border: 1px solid #dcdcdc;
+    border-radius: 4px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+
+}
+.find-more img {
+    height: 13px;
+    vertical-align: middle;
+    display: inline-block;
+    margin-top: -4px;
+}
+.find-more div {
+    display: inline-block;
 }
